Fixed mobile overflow x

--- a/src/App.css
+++ b/src/App.css
@@ -39,6 +39,10 @@
 
 html {
   scroll-behavior: smooth;
+
+  @media screen and (max-width: 480px) {
+    overflow-x: hidden;
+  }
 }
 
 body {
